[package]
name = "rsEasyML"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.2.3", features = ["cuda"] }
polars = "0.33.2"
ndarray = "0.15.6"
serde = "1"
serde_json = "1"